прикрутил авто-завершение раундов